# Dwaar

./: .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.amd64build  Dwaarfile  Dwaarfile.example  Justfile  LICENSE  NOTICE  README.md  SECURITY.md  bench.sh  clippy.toml  deny.toml  rand_test
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  docs.yml  ethicalcheck.yml  labeler.yml  release.yml  site.yml  stale.yml  version-guard.yml
bench/: Dockerfile.backend  Dockerfile.dwaar  Dockerfile.wrk  RESULTS.md  backend.rs  docker-compose.yml  nginx.conf  run-bench.sh
benchmarks/docker/: Dockerfile.dwaar  Dwaarfile.bench  docker-compose.yml  nginx-backend.conf  nginx-proxy.conf  run-benchmark.sh
crates/dwaar-admin/: Cargo.toml
crates/dwaar-admin/src/: auth.rs  handlers.rs  lib.rs  service.rs
crates/dwaar-admin/tests/: reload_parse_error.rs  uds_integration.rs
crates/dwaar-analytics/: Cargo.toml
crates/dwaar-analytics/assets/: analytics.js
crates/dwaar-analytics/benches/: aggregation.rs  decompress.rs
crates/dwaar-analytics/src/: auth.rs  beacon.rs  beacon_auth_metrics.rs  decompress.rs  injector.rs  lib.rs  otel.rs  process_metrics.rs  prometheus.rs  rate_cache_metrics.rs  sink.rs
crates/dwaar-analytics/src/aggregation/: bounded_counter.rs  latency_histogram.rs  minute_buckets.rs  mod.rs  service.rs  snapshot.rs  top_k.rs  web_vitals.rs
crates/dwaar-cli/: Cargo.toml
crates/dwaar-cli/src/: admin_client.rs  auto_update.rs  cli.rs  main.rs  readiness.rs  self_update.rs  version_check.rs
crates/dwaar-cli/tests/: cli_integration.rs  proxy_integration.rs  stress.rs  upgrade_test.rs
crates/dwaar-cli/tests/fixtures/: cache_no_store_test.dwaarfile  grpc_body_limit_test.dwaarfile  ip_filter_allow_test.dwaarfile  ip_filter_deny_test.dwaarfile
crates/dwaar-config/: Cargo.toml
crates/dwaar-config/benches/: parser.rs
crates/dwaar-config/src/: compile.rs  error.rs  format.rs  import.rs  lib.rs  model.rs  parser.rs  token.rs  watcher.rs
crates/dwaar-config/src/parser/: directives.rs  helpers.rs  layer4.rs  matchers.rs  mod.rs  observe.rs  tests.rs  transforms.rs
crates/dwaar-core/: Cargo.toml
crates/dwaar-core/benches/: route_lookup.rs
crates/dwaar-core/src/: cache.rs  context.rs  fastcgi.rs  file_server.rs  grpc_web.rs  l4.rs  l4_udp.rs  lib.rs  proxy.rs  quic.rs  registries.rs  route.rs  template.rs  trace.rs  upstream.rs  wake.rs
crates/dwaar-core/src/quic/: bridge.rs  convert.rs  h2_bridge.rs  h2_pool.rs  handler.rs  mod.rs  pool.rs  stream_guard.rs
crates/dwaar-core/tests/: quic_h2_pool_concurrency.rs
crates/dwaar-docker/: Cargo.toml
crates/dwaar-docker/src/: client.rs  labels.rs  lib.rs  watcher.rs
crates/dwaar-geo/: Cargo.toml
crates/dwaar-geo/src/: lib.rs
crates/dwaar-grpc/: Cargo.toml  build.rs
crates/dwaar-grpc/proto/: dwaar.proto
crates/dwaar-grpc/src/: dispatch.rs  events.rs  lib.rs  routing.rs  service.rs  tls.rs
crates/dwaar-grpc/tests/: proxy_integration.rs
crates/dwaar-ingress/: Cargo.toml
crates/dwaar-ingress/src/: annotations.rs  client.rs  error.rs  health.rs  leader.rs  lib.rs  main.rs  metrics.rs  reconciler.rs  tls.rs  translator.rs  watcher.rs
crates/dwaar-ingress/tests/: README.md  k8s_integration.rs
crates/dwaar-log/: Cargo.toml
crates/dwaar-log/benches/: request_log.rs
crates/dwaar-log/src/: file_writer.rs  lib.rs  request_log.rs  socket_writer.rs  writer.rs
crates/dwaar-plugins/: Cargo.toml
crates/dwaar-plugins/benches/: bot_detect.rs  compress.rs
crates/dwaar-plugins/src/: basic_auth.rs  bot_detect.rs  compress.rs  error_script_injection.rs  forward_auth.rs  ip_filter.rs  lib.rs  plugin.rs  rate_limit.rs  security_headers.rs  under_attack.rs
crates/dwaar-plugins/src/wasm/: adapter.rs  bindings.rs  cache.rs  engine.rs  error.rs  host.rs  limits.rs  mod.rs
crates/dwaar-plugins/wit/: dwaar-plugin.wit
crates/dwaar-tls/: Cargo.toml
crates/dwaar-tls/src/: cert_store.rs  dns.rs  dns_cloudflare.rs  lib.rs  mtls.rs  ocsp.rs  sni.rs  test_util.rs
crates/dwaar-tls/src/acme/: account.rs  error.rs  issuer.rs  mod.rs  service.rs  solver.rs
deploy/helm/dwaar-ingress/: Chart.yaml  values.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: admin.md  analytics.md  cache-purge.md
docs/src/appendix/: changelog.md  troubleshooting.md
docs/src/architecture/: crate-map.md  overview.md  performance.md  request-lifecycle.md
docs/src/configuration/: cli.md  dwaarfile.md  environment.md  global-options.md  named-matchers.md  placeholders.md
docs/src/contributing/: architecture.md  development.md  plugins.md
docs/src/deployment/: docker-labels.md  docker.md  helm.md  kubernetes.md  systemd.md  zero-downtime.md
docs/src/features/: analytics.md  automatic-https.md  bot-detection.md  compression.md  docker.md  logging.md  rate-limiting.md  security-headers.md  wasm-plugins.md
docs/src/getting-started/: comparison.md  installation.md  quickstart.md  what-is-dwaar.md
docs/src/guides/: deploy-integration.md  docker-deployment.md  migrating-from-caddy.md  migrating-from-nginx.md  migrating-from-traefik.md
docs/src/migration/: from-caddy.md  from-nginx.md  from-traefik.md
docs/src/observability/: analytics.md  geoip.md  logging.md  prometheus.md  tracing.md
docs/src/performance/: caching.md  compression.md  http3.md  load-balancing.md  timeouts.md
examples/wasm-plugins/hello-world/: Cargo.toml  Dwaarfile.example  build.sh
examples/wasm-plugins/hello-world/src/: lib.rs
examples/wasm-plugins/hello-world/wit/: dwaar-plugin.wit
scripts/: bump-license-date.sh  check-dev-env.sh  check-version-consistency.sh  install.sh  pgo-build.sh  verify-systemd-reload.sh
site/: astro.config.mjs  package-lock.json  package.json
site/public/: CNAME  install.sh  uninstall.sh
wit/: dwaar-plugin.wit
(+98 files in other folders)
