[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license-file = "LICENSE"
repository = "https://github.com/permanu/Dwaar"
homepage = "https://dwaar.dev"
authors = ["Permanu <hello@permanu.com>"]

[workspace.dependencies]
# Internal crates
dwaar-core = { path = "crates/dwaar-core" }
dwaar-config = { path = "crates/dwaar-config" }
dwaar-tls = { path = "crates/dwaar-tls" }
dwaar-analytics = { path = "crates/dwaar-analytics" }
dwaar-plugins = { path = "crates/dwaar-plugins" }
dwaar-admin = { path = "crates/dwaar-admin" }
dwaar-docker = { path = "crates/dwaar-docker" }
dwaar-geo = { path = "crates/dwaar-geo" }
dwaar-log = { path = "crates/dwaar-log" }

# Pingora
pingora = { version = "0.8.0", features = ["proxy", "lb"] }
pingora-core = { version = "0.8.0" }
pingora-proxy = { version = "0.8.0" }
pingora-http = { version = "0.8.0" }
pingora-load-balancing = { version = "0.8.0" }
pingora-limits = { version = "0.8.0" }
pingora-timeout = { version = "0.8.0" }
pingora-memory-cache = { version = "0.8.0" }
pingora-error = { version = "0.8.0" }

# Async runtime
tokio = { version = "1.50.0", default-features = false }
async-trait = "0.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

# Data structures
ahash = "0.8.12"
arc-swap = "1.9.0"
dashmap = "6.1.0"
lru = "0.16.3"
bytes = "1.11.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging / tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.6.0", features = ["derive", "env"] }

# System / FFI
libc = "0.2"

# HTTP types
http = "1.4.0"

# UUID
uuid = { version = "1.22.0", features = ["v7"] }

# Time
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }

# Regex (bot detection)
regex = "1.12.3"

# File watching
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }

# GeoIP
maxminddb = "0.27.3"

# Analytics data structures
hyperloglog = "1.0.3"

# Crypto (visitor cookies)
aes-gcm = "0.10.3"
rand = "0.10.0"
base64 = "0.22.1"

# Compression
flate2 = "1.1.9"
brotli = "8.0.2"

# Testing
tokio-test = "0.4.5"
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# Enable pedantic but allow common exceptions
pedantic = { level = "warn", priority = -2 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Hard denials — these are bugs
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
todo = "warn"
get_unwrap = "deny"
exit = "deny"
unwrap_used = "warn"
expect_used = "allow"
redundant_clone = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
large_futures = "warn"

# Build profiles
[profile.dev]
opt-level = 0
debug = 1              # line tables only (faster compile than full debug)
incremental = true
codegen-units = 256    # maximum parallelism for dev builds

[profile.release]
opt-level = 3
lto = "thin"           # good balance of speed vs compile time
codegen-units = 1      # maximum optimization
strip = "symbols"      # smaller binary
panic = "abort"        # smaller binary, no unwinding overhead

# Hot-path crates get maximum optimization even in dev
[profile.dev.package.pingora]
opt-level = 2
[profile.dev.package.pingora-core]
opt-level = 2
[profile.dev.package.pingora-proxy]
opt-level = 2
[profile.dev.package.tokio]
opt-level = 2
[profile.dev.package.bytes]
opt-level = 2

# Profiling profile — release speed with debug info
[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false

# Benchmark profile
[profile.bench]
inherits = "release"
debug = true
lto = "thin"
