[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license-file = "LICENSE"
repository = "https://github.com/permanu/Dwaar"
homepage = "https://dwaar.dev"
authors = ["Permanu <hello@permanu.com>"]

[workspace.dependencies]
# Internal crates
dwaar-core = { path = "crates/dwaar-core" }
dwaar-config = { path = "crates/dwaar-config" }
dwaar-tls = { path = "crates/dwaar-tls" }
dwaar-analytics = { path = "crates/dwaar-analytics" }
dwaar-plugins = { path = "crates/dwaar-plugins" }
dwaar-admin = { path = "crates/dwaar-admin" }
dwaar-docker = { path = "crates/dwaar-docker" }
dwaar-geo = { path = "crates/dwaar-geo" }
dwaar-log = { path = "crates/dwaar-log" }

# Pingora
pingora = { version = "0.8.0", features = ["proxy", "lb", "openssl"] }
pingora-core = { version = "0.8.0", features = ["openssl"] }
pingora-proxy = { version = "0.8.0" }
pingora-http = { version = "0.8.0" }
pingora-load-balancing = { version = "0.8.0" }
pingora-limits = { version = "0.8.0" }
pingora-timeout = { version = "0.8.0" }
pingora-memory-cache = { version = "0.8.0" }
pingora-cache = { version = "0.8.0" }
pingora-error = { version = "0.8.0" }

# Async runtime
tokio = { version = "1.50.0", default-features = false }
async-trait = "0.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

# Data structures
ahash = "0.8.12"
arc-swap = "1.9.0"
dashmap = "6.1.0"
parking_lot = "0.12"
lru = "0.16.3"
bytes = "1.11.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging / tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.6.0", features = ["derive", "env"] }

# System / FFI
libc = "0.2"

# HTTP types
http = "1.4.0"

# UUID
uuid = { version = "1.22.0", features = ["v7"] }

# Time
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }

# Pattern matching (bot detection)
daachorse = "1.0"

# File watching
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }

# GeoIP
maxminddb = { version = "0.27.3", features = ["mmap"] }

# Analytics data structures
hyperloglog = "1.0.3"
tdigest = "0.2.3"

# Crypto (visitor cookies, HMAC challenge signing, password hashing)
aes-gcm = "0.10.3"
bcrypt = "0.17"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.10.0"
base64 = "0.22.1"
zeroize = "1"

# File serving
mime_guess = "2"

# ACME (automatic certificate provisioning)
instant-acme = "0.7"

# OpenSSL (for TLS cert handling in dwaar-tls)
openssl = { version = "0.10.76", features = ["vendored"] }

# Memory allocator
tikv-jemallocator = "0.6"

# Inline strings (≤24 bytes stored on stack, no heap allocation)
compact_str = { version = "0.8", features = ["serde"] }

# Fast JSON serialization (SIMD-accelerated)
sonic-rs = "0.3"

# Fast random number generation (no_std-compatible, used for Random LB policy)
fastrand = "2"

# QUIC / HTTP/3 (ISSUE-079) — quinn is the standard Rust QUIC implementation,
# rustls provides TLS 1.3 for QUIC (OpenSSL doesn't support QUIC natively).
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"

# Compression
flate2 = "1.1.9"
brotli = "8.0.2"
zstd = "0.13"

# Testing
tokio-test = "0.4.5"
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# Enable pedantic but allow common exceptions
pedantic = { level = "warn", priority = -2 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Hard denials — these are bugs
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
todo = "warn"
get_unwrap = "deny"
exit = "deny"
unwrap_used = "warn"
expect_used = "allow"
redundant_clone = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
large_futures = "warn"

# Build profiles
[profile.dev]
opt-level = 0
debug = 1              # line tables only (faster compile than full debug)
incremental = true
codegen-units = 256    # maximum parallelism for dev builds

[profile.release]
opt-level = 3
lto = "fat"            # cross-crate inlining across 10 workspace crates
codegen-units = 1      # maximum optimization
strip = "symbols"      # smaller binary
panic = "abort"        # smaller binary, no unwinding overhead

# Hot-path crates get maximum optimization even in dev
[profile.dev.package.pingora]
opt-level = 2
[profile.dev.package.pingora-core]
opt-level = 2
[profile.dev.package.pingora-proxy]
opt-level = 2
[profile.dev.package.tokio]
opt-level = 2
[profile.dev.package.bytes]
opt-level = 2

# Profiling profile — release speed with debug info
[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false

# Benchmark profile
[profile.bench]
inherits = "release"
debug = true
lto = "thin"
