[package]
name = "dwaar-admin"
version = "0.1.0"
description = "Admin API service — route management, health, metrics, config"
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
dwaar-core = { workspace = true }
dwaar-analytics = { workspace = true }
pingora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
async-trait = { workspace = true }
http = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
dwaar-log = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
