[package]
name = "dwaar-analytics"
version = "0.1.0"
description = "First-party analytics — JS injection, beacon collection, in-memory aggregation"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
compact_str = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
dashmap = { workspace = true }
dwaar-log = { workspace = true }
hyperloglog = { workspace = true }
tdigest = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = "2"
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
chrono = { workspace = true }
compact_str = { workspace = true }
criterion = { workspace = true }
hyperloglog = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "aggregation"
harness = false

[lints]
workspace = true
