[package]
name = "dwaar-cli"
version = "0.3.6"
description = "Dwaar CLI — binary entry point, commands, process management"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[[bin]]
name = "dwaar"
path = "src/main.rs"

[features]
## Enable jemalloc heap profiling. Build with:
##   cargo build --release --features=heap-profile
## Run with:
##   _RJEM_MALLOC_CONF="prof:true,prof_active:true,prof_prefix:/tmp/dwaar_heap,lg_prof_interval:30" ./target/release/dwaar run -f Dwaarfile
heap-profile = ["tikv-jemallocator/profiling"]

[dependencies]
tikv-jemallocator = { workspace = true }
dwaar-config = { workspace = true }
dwaar-core = { workspace = true }
chrono = { workspace = true }
fastrand = { workspace = true }
dwaar-tls = { workspace = true }
dwaar-analytics = { workspace = true }
dwaar-plugins = { workspace = true }
dwaar-admin = { workspace = true }
dwaar-docker = { workspace = true }
dwaar-geo = { workspace = true }
dwaar-grpc = { workspace = true }
dwaar-log = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
openssl = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
