[package]
name = "dwaar-config"
version = "0.1.0"
description = "Dwaarfile parser, configuration validation, and hot-reload"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
dwaar-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
pingora-core = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
openssl = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "parser"
harness = false

[lints]
workspace = true
