[package]
name = "dwaar-core"
version = "0.1.0"
description = "Core proxy engine — ProxyHttp implementation, route table, request context"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-http = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-error = { workspace = true }
dwaar-analytics = { workspace = true }
dwaar-plugins = { workspace = true }
dwaar-tls = { workspace = true }
dwaar-geo = { workspace = true }
dwaar-log = { workspace = true }
compact_str = { workspace = true }
ahash = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time"] }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "route_lookup"
harness = false

[lints]
workspace = true
