[package]
name = "dwaar-docker"
version = "0.1.0"
description = "Docker socket watcher — auto-discover containers via labels"
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
dwaar-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
