[package]
name = "dwaar-docker"
version = "0.3.20"
description = "Docker socket watcher — auto-discover containers via labels"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
dwaar-core = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
pingora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
fastrand = { workspace = true }

[lints]
workspace = true
