[package]
name = "dwaar-geo"
version = "0.1.0"
description = "GeoIP lookup — IP to country/city via MaxMind GeoLite2"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enable city-level GeoIP lookup (~45 MB database instead of ~5 MB country).
# Adds city name, subdivision, postal code, and lat/lon to lookup results.
city = []

[dependencies]
maxminddb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true
