[package]
name = "dwaar-log"
version = "0.1.0"
description = "Request logging — structured log types, batch writer, output destinations"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util", "fs", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
