[package]
name = "dwaar-log"
version = "0.3.20"
description = "Request logging — structured log types, batch writer, output destinations"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util", "fs", "time", "rt", "macros", "net"] }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
compact_str = { workspace = true }

[[bench]]
name = "request_log"
harness = false

[lints]
workspace = true
