[package]
name = "dwaar-plugins"
version = "0.1.0"
description = "Plugin trait, plugin chain, built-in plugins (bot detection, rate limiting, compression, security headers)"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
compact_str = { workspace = true }
pingora-http = { workspace = true }
pingora-limits = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
daachorse = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
zstd = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "bot_detect"
harness = false

[[bench]]
name = "compress"
harness = false

[lints]
workspace = true
